# GPlates

./: .cvsignore  .gitattributes  .gitignore  AUTHORS  BUILD.Linux  BUILD.OSX  BUILD.Windows  CHANGELOG  CMakeLists.txt  COPYING  CREDITS  DEPS.Linux  DEPS.OSX  DEPS.Windows  GPlates_log.txt  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  bootstrap  bootstrap.sh  build-everything.sh  configure.in  generate-docs.sh  one-step-bootstrap-and-build.sh  profile.txt
doc-python-api/: CMakeLists.txt  README  conf.py.in  index.rst  pygplates_foundations.rst  pygplates_getting_started.rst  pygplates_installation.rst  pygplates_introduction.rst  pygplates_reference.rst  pygplates_sample_code.rst
doc-python-api/sample-code/: pygplates_calculate_velocities_by_plate_id.rst  pygplates_calculate_velocities_in_dynamic_plates.rst  pygplates_create_common_feature_types.rst  pygplates_create_conjugate_isochrons_from_ridge.rst  pygplates_create_topological_features.rst  pygplates_detect_topology_gaps_and_overlaps.rst  pygplates_find_average_area_and_subducting_boundary_proportion_of_topologies.rst  pygplates_find_features_overlapping_a_polygon.rst  pygplates_find_nearest_feature_to_a_point.rst  pygplates_find_overriding_plate_of_closest_subducting_line.rst  pygplates_find_total_ridge_and_subduction_zone_lengths.rst  pygplates_import_geometries_and_assign_plate_ids.rst  pygplates_import_points_and_assign_plate_ids.rst  pygplates_load_and_save_feature_collections.rst  pygplates_modify_reconstruction_pole.rst  pygplates_plate_circuits_to_anchored_plate.rst  pygplates_plate_rotation_hierarchy.rst  pygplates_query_common_feature_types.rst  pygplates_reconstruct_crustal_thickness_and_tectonic_subsidence.rst  pygplates_reconstruct_flowline_features.rst  pygplates_reconstruct_motion_path_features.rst  pygplates_reconstruct_regular_features.rst  pygplates_split_isochron_into_ridges_and_transforms.rst
pygplates/: CMakeLists.txt
pygplates/conda/: README.txt  conda_build_config.yaml  meta.yaml
pygplates/test/: test.py
src/: .cvsignore  CMakeLists.txt  GPL_legal_notice  Makefile.am  Makefile.in  Rules.in  ScribeExportGPlates.cc  ScribeExportGPlatesDemoNoGui.cc  ScribeExportGPlatesUnitTest.cc  ScribeExportPyGPlates.cc  cube_qt_demo.cc  gplates-cli_pch.h  gplates-lib_pch.h  gplates-no-gui_pch.h  gplates-unit-test_pch.h  gplates_cli_main.cc  gplates_demo_no_gui_main.cc  gplates_extract_svn_info_main.cc  gplates_main.cc  gplates_new_main.cc  gplates_pch.h  gplates_qt_demo.cc  gplates_unit_test_main.cc  pygplates_pch.h
src/api/: APIVersion.cc  APIVersion.h  AbstractConsole.h  AbstractPythonRunner.h  CMakeLists.txt  CoReg.cc  ConsoleReader.cc  ConsoleReader.h  ConsoleWriter.cc  ConsoleWriter.h  DeferredApiCall.h  DeferredApiCallImpl.h  FeatureCollection.cc  FeatureCollection.h  PyApplication.cc  PyCalculateVelocities.cc  PyColour.cc  PyCoregistrationLayerProxy.cc  PyCoregistrationLayerProxy.h  PyDateLineWrapper.cc  PyEarth.cc  PyExceptions.cc  PyExceptions.h  PyFeature.cc  PyFeature.h  PyFeatureCollection.cc  PyFeatureCollection.h  PyFeatureCollectionFileFormatRegistry.cc  PyFeatureCollectionFileFormatRegistry.h  PyFeatureCollectionFunctionArgument.cc  PyFeatureCollectionFunctionArgument.h  PyFeatureId.cc  PyFiniteRotation.cc  PyFunctions.cc  PyGPlatesModule.cc  PyGPlatesModule.h  PyGeoTimeInstant.cc  PyGeometriesOnSphere.cc  PyGeometriesOnSphere.h  PyGpmlPlateId.cc  (+80 more)
src/app-logic/: AgeGridLayerTask.cc  AgeGridLayerTask.h  AgeGridRaster.cc  AgeGridRaster.h  AgeModelCollection.cc  AgeModelCollection.h  AppLogicFwd.h  AppLogicUtils.cc  AppLogicUtils.h  ApplicationState.cc  ApplicationState.h  AssignPlateIds.cc  AssignPlateIds.h  CMakeLists.txt  CgalUtils.cc  CgalUtils.h  ClassifyFeatureCollection.cc  ClassifyFeatureCollection.h  CoRegistrationData.cc  CoRegistrationData.h  CoRegistrationLayerParams.cc  CoRegistrationLayerParams.h  CoRegistrationLayerProxy.cc  CoRegistrationLayerProxy.h  CoRegistrationLayerTask.cc  CoRegistrationLayerTask.h  CubeQuadTree.h  DeformationStrain.cc  DeformationStrain.h  DeformationStrainRate.cc  DeformationStrainRate.h  DeformedFeatureGeometry.cc  DeformedFeatureGeometry.h  DependentTopologicalSectionLayers.cc  DependentTopologicalSectionLayers.h  ExtractRasterFeatureProperties.cc  ExtractRasterFeatureProperties.h  ExtractScalarField3DFeatureProperties.cc  ExtractScalarField3DFeatureProperties.h  FeatureCollectionActivationStrategy.cc  (+323 more)
src/application/: Makefile.am  Presenter.h
src/canvas-tools/: AdjustFittedPoleEstimate.cc  AdjustFittedPoleEstimate.h  BuildTopology.cc  BuildTopology.h  CMakeLists.txt  CanvasTool.cc  CanvasTool.h  CanvasToolAdapterForGlobe.cc  CanvasToolAdapterForGlobe.h  CanvasToolAdapterForMap.cc  CanvasToolAdapterForMap.h  CanvasToolType.h  ChangeLightDirectionGlobe.cc  ChangeLightDirectionGlobe.h  ChangeLightDirectionMap.cc  ChangeLightDirectionMap.h  ClickGeometry.cc  ClickGeometry.h  CommonClickGeometry.cc  CommonClickGeometry.h  CommonDigitiseGeometry.cc  CommonDigitiseGeometry.h  CommonMoveVertex.cc  CommonMoveVertex.h  CreateSmallCircle.cc  CreateSmallCircle.h  CreateTopology.cc  CreateTopology.h  DeleteVertex.cc  DeleteVertex.h  DigitiseGeometry.cc  DigitiseGeometry.h  EditFeature.cc  EditFeature.h  EditTopology.cc  EditTopology.h  FitToPole.cc  FitToPole.h  GeometryOperationState.h  GlobeClickGeometry.cc  (+63 more)
src/cli/: CMakeLists.txt  CliAssignPlateIdsCommand.cc  CliAssignPlateIdsCommand.h  CliCommand.h  CliCommandDispatcher.cc  CliCommandDispatcher.h  CliCommandRegistry.h  CliConvertFileFormatCommand.cc  CliConvertFileFormatCommand.h  CliConvertToGpmlCommand.cc  CliConvertToGpmlCommand.h  CliEquivalentTotalRotation.cc  CliEquivalentTotalRotation.h  CliFeatureCollectionFileIO.cc  CliFeatureCollectionFileIO.h  CliInvalidOptionValue.h  CliReconstructCommand.cc  CliReconstructCommand.h  CliRelativeTotalRotation.cc  CliRelativeTotalRotation.h  CliRequiredOptionNotPresent.h  CliStageRotationCommand.cc  CliStageRotationCommand.h  cli_pch.h  cmake_sources.txt
src/contrib/: non_null_intrusive_ptr.h
src/controls/: AnimationTimer.cc  (+18 more)
(+3879 files in other folders)
